# developer-performance-analyzer

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  script.py
src/: main.py
src/cli/: parser.py
src/core/: analyzer.py  types.py  validator.py
src/data/: reader.py
src/reports/: __init__.py  base_report.py  performance_report.py
src/utils/: formatter.py
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/: test_analyzer.py  test_cli_parser.py  test_data_reader.py  test_performance_report.py  test_report_factory.py  test_validator.py
